# adventofcode2020

./: .gitignore  Cargo.toml  day_template.txt
benches/: aoc2020.rs
src/: day1.rs  day10.rs  day11.rs  day13.rs  day14.rs  day15.rs  day16.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  grid.rs  lib.rs  main.rs
src/day1/: mod.rs
src/y2019/: day17.rs  day2.rs  day5.rs  day7.rs  day9.rs  intcode.rs  mod.rs
src/y2020/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/y2021/: alu.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day2.rs  day20.rs  day21.rs  day22.rs  day24.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
