[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["Lukas Sandström <luksan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
counter = "0.5.2"
itertools = "0.9.0"
lazy_static = "1.4.0"
regex = "1.4.2"
scan_fmt = "0.2.5"
smol_str = "0.1.17"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "aoc2020"
harness = false
