[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["Lukas Sandström <luksan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.35"
arrayvec = "0.7.2"
counter = "0.5.2"
itertools = "0.10.1"
lazy_static = "1.4.0"
ndarray = "0.15.4"
num-integer = "0.1.44"
regex = "1.4.2"
scan_fmt = "0.2.5"
smol_str = "0.1.17"

[dev-dependencies]
# criterion = { version = "0.3", features = ["html_reports"] }

[profile.bench]
debug = true

[profile.test]
debug = true
opt-level = 2

[profile.release]
debug = true

[[bench]]
name = "aoc2020"
harness = false
